# AssetManagerWindows

./: README.md  requirements.txt
agent/: __init__.py  config.py  enrollment.py  installer_core.py  main.py  transport.py
agent-cpp/: CMakeLists.txt
agent-cpp/include/lanventory/: config.hpp  crypto.hpp  dpapi.hpp  enrollment.hpp  fingerprint.hpp  log.hpp  scanner.hpp  task_scheduler.hpp  transport.hpp  winhttp_client.hpp  wmi.hpp
agent-cpp/src/: config.cpp  crypto.cpp  dpapi.cpp  enrollment.cpp  fingerprint.cpp  log.cpp  main.cpp  task_scheduler.cpp  transport.cpp  winhttp_client.cpp  wmi.cpp
agent-cpp/src/scanner/: events.cpp  hardware.cpp  network.cpp  peripherals.cpp  security.cpp  software.cpp  system.cpp  users.cpp
agent/scanner/: network.py
gui/: __init__.py  agent_io.py  configurator.py  manager.py
installer/: installer.iss
scripts/: build.ps1
